syntax = "proto3";

package dron;

option go_package = "proto";

import "asignacion.proto";  // Importa Emergencia

message AsignacionDron {
    string dron_id = 1;
    asignacion.Emergencia emergencia = 2;
}

message Respuesta {
    string mensaje = 1;
}

service ServicioDron {
    rpc AtenderEmergencia (AsignacionDron) returns (Respuesta);
}
